--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "eco-move-bff",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "20"
+  },
   "scripts": {
     "dev": "tsx watch --env-file=.env api/index.ts",
-    "build": "tsup api --format esm",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -19,7 +22,6 @@
   "dependencies": {
     "@fastify/cors": "^10.0.1",
     "fastify": "^5.1.0",
-    "ibm-watson": "^9.1.0",
-    "tsup": "^8.3.5"
+    "ibm-watson": "^9.1.0"
   }
 }
